tdf#99518 Use correct decimal separator

Change-Id: I39169e7c7344fcfd594a0e0d2ab0a762cc3d5829